BoolVoidReturnWarning/actual.log
BoolWarning.swift:2:17: error: binary operator '&&' cannot be applied to two 'Bool' operands
    return true && true
           ~~~~ ^  ~~~~
